--- a/html.2/contact.html
+++ b/html.2/contact.html
@@ -18,38 +18,39 @@
     </nav>
         <main class="container">
     <form action="" method="post">
-        <h2>Formulaire</h2><br>
+        <h2>Formulaire <span style='font-size: 20px;'>&#9997;</span></h2><br>
     <div>
         <label" for="email">Email:</label>
         <input class="form-field" id="email" type="email" name="email" placeholder="Entrez votre email" >
     </div>
 
     <div>
-        <label for="subject">Sujet:</label>
+        <label for="subject">Categorie</label>
         <select id="subject" class="form-field">
-            <option value="1">Item 1</option>
-            <option value="2">Item 2</option>
-            <option value="3">Item 3</option>
+            <option value="1">Membre</option>
+            <option value="2">Organisateur</option>
+            <option value="3">Visiteur</option>
         </select>
     </div>
 
     <div>
-        <label for="message">Message:</label>
+        <label for="message">Votre requête :</label>
         <textarea  class="form-field" rows="5" placeholder="Entrez votre message" id="message"></textarea>
         
     </div>
 
-    <div>
+    <!-- <div>
         <label for="important">Important</label>
         <input type="checkbox" checked name="important" id="important">
-    </div>
+    </div> -->
 
     <div>
         <input type="submit" name="send" value="Contacter">
     </div>
-    <p>Formulaire de la page</p>
+    
     </form>
-</main>
+
+        </main>
 
 </main>
 </body>
