--- a/html.2/index.html
+++ b/html.2/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BAC A SABLE</title>
+    <title>BLOCK GAME !</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body> 
+
+    <h1 id="blockgame">BLOCK GAME</h1> <hr>
+
     <nav>
         <ul>
             <li> <a href="index.html"> Accueil </a></li>
@@ -15,12 +18,16 @@
             <li><a href="jeu.html"> Jeu </a></li>
         </ul>
     </nav>
+
 <main class="container">
-    <h1>Titre</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia, vitae.</p>
-    <h2>Titre 2</h2>
+
+    <h1 id="titre">Bienvenue !</h1>
+
+    <p>Bienvenue sur la page d'accueil du site. Tu retrouveras les onglets <b>"Contact"</b> pour nous contacter ainsi que <b>"Jeu"</b> pour jouer au jeu. Bonne chance !</p>
+    <!--<h2>Titre 2</h2>
     <p>Lorem ipsum <b> sit </b> , amet consectetur <u>adipisicing</u> elit. Aspernatur <i>nobis</i> nostrum odit quibusdam <sup> Cumque</sup>
-         <sub>quod</sub> , soluta, rerum non <del>ipsum</del> nisi accusantium ab suscipit ratione ullam. Laboriosam, esse.</p>
+         <sub>quod</sub> , soluta, rerum non <del>ipsum</del> nisi accusantium ab suscipit ratione ullam. Laboriosam, esse.</p> -->
+
 
 
 </main>
