--- a/html.2/jeu.html
+++ b/html.2/jeu.html
@@ -17,13 +17,20 @@
         </ul>
     </nav>
 <main class="container">
-    <h1>Jeu</h1>
-    <div id="score">0</div>
-    <div id="chrono"></div>
-    <div class="box">
+    <h1 id="jeu">BLOCK GAME <span style='font-size: 30px;'>&#127918;</span> </h1>
 
+    Score : <span style='font-size: 20px;'>&#127871;</span>
+    <div id="score">0</div>
+
+    Timer : <span style='font-size:20px;'>&#8987;</span>
+    <div id="chrono"></div>
+    
+    <div class="box">
     </div>   
 </main>
+<form>
+    <input type="submit" name="restart" value="Recommencer">
+</form>
 
 <script src="js/jeu.js"></script>
 
